# py-irclib

./: .coveragerc  .editorconfig  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  LICENSE  README.md  codecov.yml  pyproject.toml  pytest.ini  release.sh  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: renovate.json
.github/workflows/: codeql.yml  pre-commit-update.yml  python-publish.yml  python-tests.yml
irclib/: __init__.py  __pkginfo__.py  commands.py  errors.py  parser.py  string.py
irclib/util/: __init__.py  commands.py  compare.py  frozendict.py  numerics.py  string.py
scripts/: __init__.py  fix_pre_commit.py
tests/: __init__.py  commands_test.py  frozendict_test.py  numerics_test.py  parser_test.py  string_test.py  test_construct.py  test_masks.py
